# test_yaml01

./: CMakeLists.txt  notes.md
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform2.yml  release.yml  win-cmake.yml  win-osx-lin-cmake.yml
release/test_yaml01/lin_x64/: test_yaml  test_yaml.D
release/test_yaml01/mac_x64/: test_yaml  test_yaml.D
release/test_yaml01/win_x64/: test_yaml.xpl
src/: test_yaml01.cpp
